[package]
name = "test_jsonrpsee"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
jsonrpsee = {version = "0.16", features = ["server", "ws-client", "macros"]}
psutil = {version = "3", default-features = false, features = ["process"]}
tokio = {version = "1", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.3", features = ["env-filter"]}
